--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
     background-color: #fcf5e8;
+    font-family: sans-serif;
+    font-size: large;
 }
 
 .PlusMinusBox {
@@ -18,7 +20,6 @@ body {
 }
 
 .PlusMinusButton {
-    font-size: large;
     height: 30px;
     width: 30px;
     margin: 2px;
