--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fcf5e8;
+  background-color: rgb(250, 244, 230);
   font-family: sans-serif;
   font-size: large;
 }
@@ -23,4 +23,28 @@ body {
   height: 30px;
   width: 30px;
   margin: 2px;
+}
+
+.Buttons {
+  display: inline-flex;
+}
+
+.BigButton {
+  text-align: center;
+  width: 138px;
+  padding: 10px;
+  margin: 9px;
+  border-radius: 7px;
+  color: rgb(250, 244, 230);
+}
+
+.BigButtonActive {
+  background-color: rgb(168, 73, 75);
+  cursor: pointer;
+}
+
+.BigButtonInactive {
+  background-color: rgb(189, 168, 93);
+  cursor: default;
+  opacity: 0.7;
 }
