--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   display: inline-flex;
 }
 
-.BigButton {
+.Button {
   text-align: center;
   width: 138px;
   padding: 10px;
@@ -38,12 +38,12 @@ body {
   color: rgb(250, 244, 230);
 }
 
-.BigButtonActive {
+.ButtonActive {
   background-color: rgb(168, 73, 75);
   cursor: pointer;
 }
 
-.BigButtonInactive {
+.ButtonInactive {
   background-color: rgb(189, 168, 93);
   cursor: default;
   opacity: 0.7;
