--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,10 @@ body {
 }
 
 .PlusMinusButton {
-  height: 30px;
-  width: 30px;
-  margin: 2px;
+  font-size: large;
+  height: 60px;
+  width: 60px;
+  margin: 5px;
 }
 
 .Text {
@@ -51,8 +52,9 @@ body {
 
 .Button {
   text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
   width: 50%;
-  padding: 10px;
   margin: 9px;
   border-radius: 7px;
   color: rgb(250, 244, 230);
