--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,21 @@ body {
 
 .App {
   display: flex;
+  height: 100%;
   justify-content: center;
 }
 
 .ResourceManager {
   width: fit-content;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .PlusMinusBoxes {
   display: flex;
   justify-content: center;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 10px 10px 10px;
 }
 
 .PlusMinusBox {
@@ -54,7 +58,7 @@ body {
   text-align: center;
   padding: 1em 0 1em 0;
   width: 50%;
-  margin: 5px;
+  margin: 10px;
   border-radius: 7px;
   color: rgb(250, 244, 230);
 }
