--- a/src/App.css
+++ b/src/App.css
@@ -17,32 +17,10 @@ body {
   transform: translateY(-50%);
 }
 
-.PlusMinusBoxes {
+.Counters {
   display: flex;
   justify-content: center;
   padding: 5px 10px 10px 10px;
-}
-
-.PlusMinusBox {
-  display: inline-block;
-  margin: 5px 10px 0 10px;
-}
-
-.ResourcePicture {
-  display: flex;
-  justify-content: center;
-}
-
-.ResourceValue {
-  display: flex;
-  justify-content: center;
-}
-
-.PlusMinusButton {
-  font-size: large;
-  height: 60px;
-  width: 60px;
-  margin: 5px 5px 0 5px;
 }
 
 .Text {
@@ -52,24 +30,4 @@ body {
 
 .Buttons {
   display: flex;
-}
-
-.Button {
-  text-align: center;
-  padding: 1em 0 1em 0;
-  width: 50%;
-  margin: 10px;
-  border-radius: 7px;
-  color: rgb(250, 244, 230);
-}
-
-.ButtonActive {
-  background-color: rgb(168, 73, 75);
-  cursor: pointer;
-}
-
-.ButtonInactive {
-  background-color: rgb(189, 168, 93);
-  cursor: default;
-  opacity: 0.7;
 }
