--- a/src/Button.css
+++ b/src/Button.css
@@ -1,10 +1,5 @@
 .Button {
   text-align: center;
-  padding: 1em 0 1em 0;
-  width: 50%;
-  margin: 10px;
-  border-radius: 7px;
-  color: rgb(250, 244, 230);
 }
 
 .Active {
@@ -16,4 +11,21 @@
   background-color: rgb(189, 168, 93);
   cursor: default;
   opacity: 0.7;
+}
+
+.Rounded {
+  background-color: white;
+  border-radius: 50%;
+  color: black;
+  height: 50px;
+  line-height: 50px;
+  width: 50px;
+}
+
+.Squared {
+  color: white;
+  padding: 0.75em 0 0.75em 0;
+  width: 50%;
+  margin: 10px;
+  border-radius: 5px;
 }
