--- a/src/Counter.css
+++ b/src/Counter.css
@@ -5,13 +5,14 @@
 
 .Counter .Description {
   display: flex;
+  height: 40px;
   justify-content: center;
 }
 
 .Counter .Value {
   display: flex;
   justify-content: center;
-  font-size: large;
+  font-size: x-large;
 }
 
 .Counter .Buttons .Button {
